# paperstack

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
.kiro/specs/ai-paper-news-reader/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/rfc-easy-reader/: design.md  requirements.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs
src-tauri/src/api/: arxiv.rs  groq.rs  mod.rs  osv.rs  rfc_editor.rs  translate.rs
src-tauri/src/commands/: mod.rs  rfc_commands.rs  vuln_commands.rs
src-tauri/src/db/: mod.rs  models.rs  rfc_queries.rs  vuln_queries.rs
src-tauri/src/scanner/: cargo.rs  cocoapods.rs  dart.rs  elixir.rs  go.rs  maven.rs  mod.rs  npm.rs  nuget.rs  php.rs  pip.rs  ruby.rs  swift.rs
src/components/: CategoryTabs.tsx  Header.tsx  PaperCard.tsx  PaperList.tsx  SettingsModal.tsx
src/components/icons/: index.tsx
src/components/rfc/: RfcCard.tsx  RfcDetail.tsx  RfcFilter.tsx  RfcList.tsx  RfcStatusBadge.tsx  index.ts
src/components/vuln/: DirectoryScanner.tsx  ScanResultList.tsx  SeverityBadge.tsx  VulnCard.tsx  VulnDetail.tsx  VulnFilter.tsx  VulnList.tsx  index.ts
src/hooks/: useCategories.ts  usePapers.ts  useRfcBookmarks.ts  useRfcDetail.ts  useRfcHistory.ts  useRfcs.ts  useSettings.ts  useVulnScanner.ts  useVulnerabilities.ts
src/styles/: index.css
src/types/: index.ts  rfc.ts  vuln.ts
