[package]
name = "paperstack"
version = "1.1.0"
description = "Paperstack - AI/LLM/プログラミング関連の論文・RFCを整理して読む"
authors = ["you"]
edition = "2021"

[lib]
name = "paperstack_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt", "time", "macros"] }
thiserror = "2"
urlencoding = "2"
quick-xml = "0.31"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
